# communication

./: .RData  .Rbuildignore  .gitignore  DESCRIPTION  DESCRIPTION~  NAMESPACE  RcppOpenSmile.Rproj  cleanup  cleanup.win  config.status  configure  configure.ac  foo.txt
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  communication-package.R  components.R  create-component.R  create.config.R  extract.features.R  hmm.R  hmm_autocorr.R  llh.R  model.R  segment.utterances.R  select-params.R  standardizeFeatures.R
inst/testdata/: loudness.conf
man/: communication-package.Rd  components.Rd  createConfig.Rd  extractFeatures.Rd  generate_config_string.Rd  getEdges.Rd  getNumberFeatures.Rd  hmm.Rd  labelUtterances.Rd  llh.Rd  pipeline.Rd  pipeline.append.Rd  play.Rd  segment.utterances.Rd  selectParams.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  crcppaudio.cpp  crcppaudio.h  crcppdatabase.cpp  crcppdatabase.h  crcppwav.cpp  crcppwav.h  hmm.cpp  rcpp_opensmile_Main.cpp  symbols.rds
src/conf/: config.h.in
src/config/: audspec.conf  emobase_live4.conf  emobase_live4_batch.conf  my_audspec.conf  turn_frames_features.conf
src/config/shared/: standard_data_output.conf.inc  standard_data_output_lldonly.conf.inc
src/develop/include/: develop.h
src/lame/libmp3lame/: VbrTag.c  VbrTag.h  gain_analysis.h  id3tag.h  lame.c  presets.c  quantize.c  tables.h  util.c  vbrquantize.c
src/lame/mpglib/: interface.c  layer1.c  layer2.c
src/mp3/: id3.cpp  id3.h
src/opensmile/src/classifiers/: libsvmliveSink.cpp  svmSink.cpp
src/opensmile/src/classifiers/julius/: juliusSink.cpp
src/opensmile/src/classifiers/libsvm/: svm.cpp
src/opensmile/src/core/: commandlineParser.cpp  componentManager.cpp  configManager.cpp  dataMemory.cpp  dataProcessor.cpp  dataReader.cpp  dataSelector.cpp  dataSink.cpp  dataSource.cpp  dataWriter.cpp  nullSink.cpp  smileCommon.cpp  smileComponent.cpp  smileLogger.cpp  vecToWinProcessor.cpp  vectorProcessor.cpp  vectorTransform.cpp  winToVecProcessor.cpp  windowProcessor.cpp
src/opensmile/src/dsp/: dbA.cpp  signalGenerator.cpp  smileResample.cpp  specResample.cpp  specScale.cpp  vadV1.cpp
src/opensmile/src/dspcore/: acf.cpp  amdf.cpp  contourSmoother.cpp  deltaRegression.cpp  fftsg.c  fullinputMean.cpp  fullturnMean.cpp  monoMixdown.cpp  transformFft.cpp  turnDetector.cpp  vectorMVN.cpp  windower.cpp
src/opensmile/src/examples/: exampleSink.cpp  exampleVectorProcessor.cpp  exampleWindowProcessor.cpp  pitchBaseExample.cpp  simpleMessageSender.cpp
src/opensmile/src/functionals/: functionalComponent.cpp  functionalCrossings.cpp  functionalDCT.cpp  functionalExtremes.cpp  functionalLpc.cpp  functionalMeans.cpp  functionalMoments.cpp  functionalOnset.cpp  functionalPeaks.cpp  functionalPeaks2.cpp  functionalPercentiles.cpp  functionalRegression.cpp  functionalSamples.cpp  functionalSegments.cpp  functionalTimes.cpp  functionals.cpp
src/opensmile/src/include/android/: jniMessageInterface.hpp  openslesSource.hpp
src/opensmile/src/include/classifiers/: libsvmliveSink.hpp  svmSink.hpp
src/opensmile/src/include/core/: commandlineParser.hpp  componentList.hpp  componentManager.hpp  configManager.hpp  dataMemory.hpp  dataProcessor.hpp  dataReader.hpp  dataSelector.hpp  dataSink.hpp  dataSource.hpp  dataWriter.hpp  exceptions.hpp  nullSink.hpp  smileCommon.hpp  smileComponent.hpp  smileLogger.hpp  smileTypes.h  vecToWinProcessor.hpp  vectorProcessor.hpp  vectorTransform.hpp  winToVecProcessor.hpp  windowProcessor.hpp
src/opensmile/src/include/dsp/: dbA.hpp  signalGenerator.hpp  smileResample.hpp  specResample.hpp  specScale.hpp  vadV1.hpp
src/opensmile/src/include/dspcore/: acf.hpp  amdf.hpp  contourSmoother.hpp  deltaRegression.hpp  fftmagphase.hpp  framer.hpp  fullinputMean.hpp  fullturnMean.hpp  monoMixdown.hpp  preemphasis.hpp  transformFft.hpp  turnDetector.hpp  vectorMVN.hpp  vectorPreemphasis.hpp  windower.hpp
src/opensmile/src/include/examples/: componentTemplate.hpp  exampleProcessor.hpp  exampleSink.hpp  exampleSource.hpp  exampleVectorProcessor.hpp  exampleWindowProcessor.hpp  pitchBaseExample.hpp  simpleMessageSender.hpp  smileComponentExample.hpp
src/opensmile/src/include/functionals/: functionalComponent.hpp  functionalCrossings.hpp  functionalDCT.hpp  functionalExtremes.hpp  functionalLpc.hpp  functionalMeans.hpp  functionalModulation.hpp  functionalMoments.hpp  functionalOnset.hpp  functionalPeaks.hpp  functionalPeaks2.hpp  (+6 more)
src/opensmile/src/io/: libsvmSink.cpp
src/opensmile/src/iocore/: RcppDataSink.cpp  arffSink.cpp  arffSource.cpp  csvSink.cpp  csvSource.cpp  datadumpSink.cpp  htkSink.cpp  htkSource.cpp  waveSink.cpp  waveSinkCut.cpp  waveSource.cpp
src/opensmile/src/lld/: cens.cpp  chroma.cpp  formantLpc.cpp  formantSmoother.cpp  harmonics.cpp  lpc.cpp  lsp.cpp  pitchDirection.cpp  pitchJitter.cpp  pitchShs.cpp  pitchSmootherViterbi.cpp  tonefilt.cpp  tonespec.cpp
src/opensmile/src/lldcore/: energy.cpp  intensity.cpp  melspec.cpp  mfcc.cpp  mzcr.cpp  pitchACF.cpp  pitchBase.cpp  pitchSmoother.cpp  plp.cpp  spectral.cpp
src/opensmile/src/other/: bowProducer.cpp  maxIndex.cpp  valbasedSelector.cpp  vectorOperation.cpp
src/opensmile/src/portaudio/: portaudioDuplex.cpp  portaudioSink.cpp  portaudioSource.cpp  portaudioWavplayer.cpp
src/opensmile/src/rnn/: rnn.cpp  rnnProcessor.cpp  rnnSink.cpp  rnnVad2.cpp
src/opensmile/src/smileutil/: smileUtil.c  smileUtilSpline.c  smileUtil_cpp.cpp  zerosolve.cpp
src/opensmile/src/video/: openCVSource.cpp
src/portaudio/include/: pa_mac_core.h  pa_win_wasapi.h  pa_win_wmme.h  portaudio.h
src/portaudio/src/common/: pa_converters.c  pa_converters.h  pa_cpuload.c  pa_debugprint.c  pa_endianness.h  pa_front.c  pa_hostapi.h  pa_memorybarrier.h  pa_process.c  pa_process.h  pa_ringbuffer.c  pa_trace.c  pa_types.h  pa_util.h
src/utils/: utils_global.cpp  utils_global.h
src/windows/: io_win32.cpp  io_win32.h
tests/: testthat.R
tests/testthat/: test-createConfig.R  test-pipeline.R  test-segmentation.R  test-wav.R
vignettes/: extracting-features.Rmd
(+77 files in other folders)
